fixing input bug on firefox/safari for quickshop and product pages

--- a/lets-get-sweaty/src/styles/global/layout.scss
+++ b/lets-get-sweaty/src/styles/global/layout.scss
@@ -471,7 +471,8 @@ nav a:hover{
   background: #fff;
   border: 1px solid #000;
   font-size: 1em;
-  padding: 1.55em;
+  padding: 1em;
+  height: 3.5em;
 }
 
 .quickshop-form button{
@@ -482,6 +483,7 @@ nav a:hover{
 
 .quickshop-form select{
   padding:1em;
+  height: 3.5em;
   font-size: 1em;
   border: 1px solid #000;
 }
@@ -1020,6 +1022,7 @@ footer input:focus{
 }
 
 .scent-selector{
+  height: 2em;
   text-transform: uppercase !important;
 }
 
@@ -1069,7 +1072,8 @@ footer input:focus{
 
 
 #Quantity{
-  height:16px;
+  height:2em;
+  // height:16px;
 }
 
 // ==================== Product Image
